test/fixtures/fail/unterminated_calminstruction.l4gs.g
; Missing `end calminstruction`.

        calminstruction foo value*
                emit 1, value
